--- a/test.html
+++ b/test.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-74JH1Q3Y6H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-74JH1Q3Y6H');
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,5 +25,6 @@
     <h1>안녕하세요! 버튼 예제입니다.</h1>
     <button onclick="alert('버튼이 클릭되었습니다!')">클릭하세요!</button>
 </body>
+
 </html>
 
